<resources>
    <string name="app_name">Trắc nghiệm tiếng anh</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_trangchu" translatable="false">Trang chủ</string>
    <string name="menu_gioithieu">giới thiệu</string>
    <string name="menu_thongtincanhan">Thông tin cá nhân</string>
    <string name="menu_lichsulambai">Lịch sử làm bài</string>
    <string name="menu_thoatungdung">Thoát ứng dụng</string>


    <string name="title_activity_home_">Home_Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>