<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_trangchu" />
        <item
            android:id="@+id/gioithieu"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gioithieu" />
        <item
            android:id="@+id/thongtincanhan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_thongtincanhan" />
        <item
            android:id="@+id/lichsulambai"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_lichsulambai" />
        <item
            android:id="@+id/thoatungdung"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_thoatungdung" />
    </group>
</menu>