<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.poly.tracnghiem12.Fragment.Trangchu_Fragment"
        android:label="@string/menu_trangchu"
        tools:layout="@layout/fragment_trangchu_" />

    <fragment
        android:id="@+id/gioithieu"
        android:name="com.poly.tracnghiem12.Fragment.Gioithieu_Fragment"
        android:label="@string/menu_gioithieu"
        tools:layout="@layout/fragment_gioithieu_" />

    <fragment
        android:id="@+id/thongtincanhan"
        android:name="com.poly.tracnghiem12.Fragment.Thongtincanhan_Fragment"
        android:label="@string/menu_thongtincanhan"
        tools:layout="@layout/fragment_thongtincanhan_" />
    <fragment
        android:id="@+id/lichsulambai"
        android:name="com.poly.tracnghiem12.Fragment.Lichsulambai_Fragment"
        android:label="@string/menu_lichsulambai"
        tools:layout="@layout/fragment_lichsulambai_" />
    <fragment
        android:id="@+id/thoatungdung"
        android:name="com.poly.tracnghiem12.Fragment.Thoatungdung_Fragment"
        android:label="@string/menu_thoatungdung"
        tools:layout="@layout/fragment_thoatungdung_" />

</navigation>